--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -78,7 +78,9 @@
                 </div>
 
                 <div class="btnwrap">
+                    <!-- sign-up -->
                     <a href="../agreement">Sign-up</a>
+                    <!-- login -->
                     <input type="submit" id="login_btn" value="Login" style="cursor:pointer">
                 </div>
 
