--- a/templates/tabs/conference_write.html
+++ b/templates/tabs/conference_write.html
@@ -35,12 +35,12 @@
                 {{ form.title }}
             </div><br>
 
-            <label>Type: </label>
+            <label>Academic conference: </label>
             <div>
                 {{ form.academic_conference }}
             </div><br>
 
-            <label>Applicant: </label>
+            <label>Period: </label>
             <div>
                 {{ form.period }}
             </div><br>
