--- a/templates/tabs/ip_write.html
+++ b/templates/tabs/ip_write.html
@@ -40,9 +40,9 @@
                 {{ form.type }}
             </div><br>
 
-            <label>Applicant: </label>
+            <label>Serial Number: </label>
             <div>
-                {{ form.applicant }}
+                {{ form.number }}
             </div><br>
 
             <label>Applied Date: </label>
