--- a/templates/gallery/gallery.html
+++ b/templates/gallery/gallery.html
@@ -78,7 +78,7 @@
             <div class="col-sm-8">
                 <div style="margin-top:20px;">
                     <h1>This is SELab Gallary</h1>
-                    <p style="font-size:20px"><FONT face="돋움">&nbsp;Our memories are precious:</FONT></p>
+                    <p style="font-size:20px">&nbsp;Our memories are precious:</p>
                 </div>
 
                 {% if gallery_all %}
