--- a/templates/main/test.html
+++ b/templates/main/test.html
@@ -6,7 +6,7 @@
     <title>SELab - Home</title>
     <meta name="description" content="particles.js is a lightweight JavaScript library for creating particles.">
     <meta name="author" content="Vincent Garreau" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=1280">
 
     <link rel="stylesheet" href="{% static 'css/base.css' %}?ver=3.5">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
