--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,11 @@
 <html>
 <head>
     <meta charset='utf-8'>
+    <meta name="viewport" content="width=1280">
+    <!-- original viewport
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    -->
+
     <link rel = "stylesheet" href="{% static 'css/base.css' %}?ver=3.5">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
