--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
 
                     <li class="nav-item">
                         <button id="btn1" class="menu-btn">
-                            <a class="nav-link hello" href="/main/test" style="color:white;">Home</a>
+                            <a class="nav-link hello" href="/" style="color:white;">Home</a>
                         </button>
                     </li>
 
